# peppa-agent

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
docs/: 001-technical-architecture.md  002-minimal-debug-loop.md  003-memory-extraction.md  003-memory-tool-call-test.md  004-memory-requirements.md  005-memory-graph-view.md  006-conversation-identity.md  007-memory-recall.md  008-topic-boundary-tool.md  009-follow-up-development-plan.md
prompts/: README.md
prompts/agent/: system.md
prompts/memory/: tool-call-test-system.md
scripts/: README.md
skills/: README.md
skills/conversation-identity/: SKILL.md
skills/memory-extraction/: SKILL.md
skills/topic-boundary-detection/: SKILL.md
src/peppa/: paths.py
src/peppa/adapters/: __init__.py
src/peppa/api/: __init__.py  app.py
src/peppa/cli/: __init__.py  main.py
src/peppa/config/: __init__.py  settings.py
src/peppa/core/: __init__.py  agent.py
src/peppa/gateway/: __init__.py
src/peppa/identity/: __init__.py  store.py  tool_schema.py
src/peppa/memory/: __init__.py  auto_extraction.py  graph.py  normalization.py  recall.py  schema.py  storage.py  tool_schema.py
src/peppa/models/: __init__.py  openai_compatible.py
src/peppa/prompts/: __init__.py  loader.py
src/peppa/runtime/: __init__.py
src/peppa/topics/: __init__.py  store.py  tool_schema.py
tests/: test_memory_graph_store.py  test_topic_boundary_store.py
tools/: README.md
web/: index.html  package-lock.json  package.json
web/src/: MemoryGraphPage.tsx  api.ts  main.tsx  styles.css  types.ts
(+3 files in other folders)
