[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peppa-agent"
version = "0.1.0"
description = "Peppa local AI agent runtime and debug console."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
peppa = "peppa.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/peppa"]

[tool.ruff]
line-length = 100
target-version = "py311"
